# MyoGen

./: .gitmodules  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: sphinx.yml
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/api/: currents_api.rst  index.rst  plotting_api.rst  simulator_api.rst  types_api.rst  utils_api.rst
docs/source/templates/autosummary/: class.rst  data.rst  function.rst
examples/: 00_simulate_recruitment_thresholds.py  01_simulate_spike_trains.py  02_simulate_muscle.py  03_simulate_surface_muaps.py  04_simulate_surface_emg.py  05_simulate_currents.py  06_simulate_force.py  07_simulate_cortical_input.py
myogen/: __init__.py
myogen/simulator/: __init__.py  create_physiological_distribution.py
myogen/simulator/core/: __init__.py  physiological_distribution.py
myogen/simulator/core/emg/: __init__.py  electrodes.py  intramuscular_array.py  mu_sim.py  surface_emg.py
myogen/simulator/core/emg/surface/: simulate_fiber.py  surface_emg.py
myogen/simulator/core/force/: __init__.py  force_model.py
myogen/simulator/core/muscle/: __init__.py  muscle.py
myogen/simulator/core/spike_train/: __init__.py  classes.py  functions.py  spike_train.py
myogen/simulator/nmodl_files/: gammapointprocess.mod  motoneuron.mod  muscle_unit.mod  muscle_unit_calcium.mod
myogen/utils/: __init__.py  cortical_inputs.py  currents.py  nmodl.py  types.py
myogen/utils/plotting/: __init__.py  currents.py  force.py  muscle.py  plotting.py  recruitment_thresholds.py  spikes.py  surface_emg.py
