[project]
name = "MyoGen"
version = "0.1.0"
description = "Surface and Intramuscular EMG simulation toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.21.0",
    "impi-rt>=2021.15.0 ; sys_platform == 'win32'",
    "matplotlib>=3.10.1",
    "mpi4py>=4.0.3",
    "neuron>=8.2.6 ; sys_platform == 'linux'",
    "numpy>=1.26",
    "pyneuroml>=1.3.15",
    "pynn>=0.12.4",
    "pyqt6>=6.9.0",
    "scikit-fmm>=2025.1.29",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[tool.ty.rules]
invalid-syntax-in-forward-annotation = "ignore"
possibly-unbound-import = "ignore"

[dependency-groups]
docs = [
    "enum-tools[sphinx]>=0.12.0",
    "linkify-it-py>=2.0.3",
    "memory-profiler>=0.61.0",
    "pydata-sphinx-theme>=0.16.1",
    "pygments>=2.19.2",
    "rinohtype>=0.5.5",
    "sphinx>=8.1.3",
    "sphinx-gallery>=0.19.0",
    "toml>=0.10.2",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "myogen"
module-root = ""

[tool.setuptools]
packages = ["myogen"]
